# femtoCAD

./: .clang-format  CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/: Dependencies.cmake  warnings.cmake
cmake/dependencies/: Qt.cmake  ms-gsl.cmake  opendxf.cmake  tl-expected.cmake
src/app/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  SceneView.cpp  SceneView.hpp  Settings.cpp  Settings.hpp  main.cpp
src/core/: Arc.cpp  BoundingBox.cpp  CMakeLists.txt  Circle.cpp  Coordinate.cpp  InfiniteLine.cpp  Layer.cpp  Line.cpp  Polyline.cpp  Workspace.cpp
src/core/include/core/: Arc.hpp  BoundingBox.hpp  Circle.hpp  Coordinate.hpp  InfiniteLine.hpp  Layer.hpp  Line.hpp  Polyline.hpp  Workspace.hpp
src/core/include/core/io/: DxfImport.hpp
src/core/include/core/primitives/: NonNegative.hpp  Radius.hpp
src/core/include/core/units/: Angle.hpp
src/core/include/core/utility/: VectorExtensions.hpp
src/core/io/: DxfImport.cpp
tests/: AngleTests.cpp  ArcTests.cpp  CMakeLists.txt  CircleTests.cpp  DxfImportTests.cpp  InfiniteLineTests.cpp  LayerTests.cpp  LineTests.cpp  NonNegativeTests.cpp  PolylineTests.cpp
tests/Matchers/: ArcMatcher.cpp  ArcMatcher.hpp  BoundingBoxMatcher.cpp  BoundingBoxMatcher.hpp  CircleMatcher.cpp  CircleMatcher.hpp  CoordinateMatcher.cpp  CoordinateMatcher.hpp  LayerMatcher.cpp  LayerMatcher.hpp  LineMatcher.cpp  LineMatcher.hpp  PolylineMatcher.cpp  PolylineMatcher.hpp  RadiusMatcher.cpp  RadiusMatcher.hpp
tests/TestData/: example.dxf
